@@ -161,6 +161,8 @@ Changes from 4.3.x -> 4.4-alpha
   names are partial matches of other graph configurations (Thanks, Jeremy Laidman)
 * Add --noexec option to logfetch to ignore commands to dynamically list files.
   (Suggested by Jeremy Laidman)
+* xymoncmd now makes it clearer when it's dropping you into a shell, and
+  in these cases the shell is marked interactive.
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
